fix: 修复 ijs-icon 样式设置细节问题，去掉 overflow: hidden

--- a/components/icon.less
+++ b/components/icon.less
@@ -1,7 +1,6 @@
 /* ========== icon.less - svg 图标的样式 ========== */
 .ijs-icon {
   display: inline-block;
-  overflow: hidden;
 
   &__svg {
     display: inline-block;
